# ramparts

./: .gitignore  AGENT.md  Cargo.toml  Deploy-Dockerfile  MCP-Dockerfile  Makefile  README.md  build.rs  clippy.toml  config.yaml
.cargo/: audit.toml
.cursor/rules/: mcp.json
.github/workflows/: ci.yml  cicd.yml  e2e.yml  pr-check.yml  pr-sec-trivy.yml  release.yml
docs/: CHANGELOG-v0.7.0.md  api.md  cli.md  configuration.md  features.md  integration.md  latest-formats.md  security-features.md  troubleshooting.md
examples/: config_example.json  servers.txt  stdio_example.md
rules/pre/: command_injection.yarac  cross_origin_escalation.yar  mcp_config_risk.yar  path_traversal.yarac  secrets_leakage.yarac  sql_injection.yar
scripts/: compile_yara_rules.sh  manage_yara_x_rules.sh  setup_yara.sh  setup_yara_x.sh
src/: banner.rs  cache.rs  config.rs  constants.rs  core.rs  integration_tests.rs  main.rs  mcp_client.rs  mcp_server.rs  scanner.rs  server.rs  storage.rs  types.rs  utils.rs
src/security/: cross_origin_scanner.rs  mod.rs
test_configs/: claude_desktop_config.json  cursor_mcp.json  vscode_mcp.json  windsurf_mcp.json  zed_mcp.json
tool_storage/: https_api.example.com_mcp_.json
yararules/: command_injection.yar  path_traversal.yar  secrets_leakage.yar
